# yamaopt_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  yamaopt.rosinstall
.github/workflows/: main.yaml
config/: fetch_conf.yaml  fetch_plane_polygons.rviz  fetch_sensors.xacro  fetch_wireless_charger.rviz  pr2_broom.rviz  pr2_conf.yaml  pr2_larm_conf.yaml  pr2_plane_polygons.rviz  pr2_rarm_conf.yaml  pr2_sensors.xacro
demo/: fetch-place-sensor.l  fetch-receive-delivery.l  pr2-place-sensor.l  soup-from-boil.l  switch-module-grasp.l  utils.l
demo/fetch_receive_delivery/: fetch-receive-delivery.l
demo/pr2_broom/: broom_handle.launch  broom_handle.rviz  broom_recognition.launch  pr2-broom.l  yolov2_with_pr2.launch
demo/soup_from_boil/: soup-from-boil.l  soup_from_boil.launch
euslisp/: pr2-sensor-placement-client.l
launch/: charging_module_detector.launch  debug_accum_polygons.launch  fetch_rosbag_play.launch  fetch_rosbag_record.launch  fetch_sensor_placement.launch  pr2_broom_plane_detection.launch  pr2_rosbag_play.launch  pr2_rosbag_record.launch  pr2_sensor_placement.launch  republish_l515_images.launch  sample_sensor_placement_dump_request.launch
msg/: SensorPlacementRequest.msg  SensorPlacementResponse.msg
sample/: sample_fixed_polygon_sensor_placement.launch  sample_pr2_sensor_placement.launch
scripts/: accum_polygons.py  debug_accumu_polygons.py  debug_visualize_polygons.py  download_sample_data.py  handle-charging-module.l  pub-broom-box-array.l  pub-robot-plane-common.l  pub-robot-plane-fetch.l  pub-robot-plane-pr2.l  pub-robot-plane.l  sample-sensor-placement-client.l  sample-sensor-placement-dump-request.l  sample-sensor-placement-with-robot-body-client.l  sensor_placement.py  simple-navigation.l  sub_and_call_sensor_placement.py
srv/: AccumulatePolygons.srv  SensorPlacement.srv
test/: debug_accumu_polygons.py  debug_sensor_placement.py  sensor_placement.test  test-fetch-sensor-placement.l  test-pr2-sensor-placement.l  test-sensor-placement-common.l  test_fetch_body_sensor_placement.test  test_fetch_sensor_placement.test  test_fixed_sensor_placement.py  test_pr2_sensor_placement.test
