<?xml version="1.0"?>
<package format="2">
  <name>yamaopt_ros</name>
  <version>0.0.1</version>
  <description>The yamaopt_ros package</description>

  <maintainer email="h-ishida@jsk.imi.i.u-tokyo.ac.jp">Hirokazu Ishida</maintainer>
  <maintainer email="yamaguchi@jsk.imi.i.u-tokyo.ac.jp">Naoya Yamaguchi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <!-- Comment out to test only pip install -->
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <!-- <exec_depend>jsk_pcl_ros</exec_depend> -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- <test_depend>roseus</test_depend> -->
  <!-- <test_depend>pr2eus</test_depend> -->
  <!-- <test_depend>fetcheus</test_depend> -->

</package>
